style(app): :lipstick: adds margin to edit dialogs to prevent clipping of floating label

--- a/src/frontend/akakraft-online/src/styles.scss
+++ b/src/frontend/akakraft-online/src/styles.scss
@@ -19,3 +19,10 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+// Mat-Dialog: erstes mat-form-field mit outline-appearance braucht oben
+// etwas Platz damit das floating label nicht abgeschnitten wird.
+mat-dialog-content {
+  padding-top: 8px !important;
+  overflow-x: hidden;
+}
